--- a/HW9/css/style.css
+++ b/HW9/css/style.css
@@ -35,14 +35,41 @@ body {
 	width: 320px;
 	overflow: hidden;
 
-	background-color: #ededed;
+	background-color: #282638;
+}
+
+.todo__heder{
+	display: flex;
+}
+
+.todo__data {
+	min-width: 40%;
+	padding: 10px 5px;
+	font-size: 18px;
+  background-color: #010a01;
+	text-align: center;
+	text-transform: uppercase;
+
+
+	color: rgb(0, 247, 255);
+  text-shadow:
+    0 0 7px rgb(0, 247, 255),
+    0 0 10px rgb(0, 247, 255),
+    0 0 21px rgb(0, 247, 255),
+    0 0 42px rgb(0, 247, 255),
+    0 0 82px rgb(0, 247, 255),
+    0 0 92px rgb(0, 247, 255),
+    0 0 102px rgb(0, 247, 255),
+    0 0 151px rgb(0, 247, 255);
 }
 
 .todo__title {
-	background-color: #369;
-	color: #fff;
-	font-size: 16px;
+	min-width: 60%;
+	background-color: rgb(78, 67, 67);
+	color: rgb(0, 247, 255);
+	font-size: 18px;
 	text-align: center;
+	line-height: 37px;
 	padding: 15px 30px;
 	text-shadow: 0 0 2px #000;
 	box-shadow: 0 2px 5px #666;
@@ -51,7 +78,7 @@ body {
 .todo__field_name {
 	border: 1px solid #ccc;
 	border-radius: 3px;
-	margin: 10px 5px;
+	margin: 15px 5px 10px 5px;
 	width: calc(100% - 2px - 10px);
 	padding: 10px 20px;
 }
@@ -63,32 +90,53 @@ body {
 }
 
 .todo__item {
-	margin: 5px 0px;
-	padding: 5px 20px;
+	margin: 10px 8px;
+	padding: 8px;
+	/* border: 2px solid #0fa; */
+	border-radius: 10px;
+	background-color:rgb(68, 116, 76);
 
 	display: flex;
 	align-items: center;
-	gap: 30px;
+	justify-content: space-between;
+	gap: 5px;
+}
+
+input[type="checkbox"] {
+	accent-color: rgb(0, 247, 255);
 }
 
 .todo__item:not(:last-child) {
 	border-radius: 1ps solid #ccc;
 }
 
+.todo__item.checked {
+  background-color:rgba(39, 68, 44, 0.829);
+}
+
 .todo__status {
 	width: 30px;
 	height: 20px;
+	border: 5px solid #0fa;
 }
 
 .todo__name {
 	font-size: 14px;
-	color: #204060;
+	color: #fcfcfc;
 	font-weight: bold;
-	text-transform: uppercase;
 
-	max-width: 78%;
-	overflow: hidden;
-	max-height: 48px;
+	max-width: 62%;
+	min-width: 62%;
+	overflow-y: scroll;
+	word-wrap: break-word;
+	max-height: 24px;
+
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
+
+.todo__name::-webkit-scrollbar{
+	display: none;
 }
 
 .todo__status:checked~.todo__name {
@@ -96,10 +144,9 @@ body {
 	text-decoration: line-through;
 }
 
-.todo__btn_clear {
+.todo__btn {
 	border: 0;
-	padding: 10px 20px;
-	margin: 5px;
+	padding: 5px;
 	border-radius: 5px;
 	background-color: #369;
 	font-size: 12px;
@@ -110,6 +157,23 @@ body {
 	opacity: 0.8;
 }
 
-.todo__btn_clear:hover {
+.todo__btn_clear {
+	border: 0;
+	padding: 10px 20px;
+	margin: 5px 5px 10px 5px;
+	border-radius: 5px;
+	background-color: #369;
+	font-size: 12px;
+	font-weight: bold;
+	color: #fff;
+	text-transform: uppercase;
+	cursor: pointer;
+	opacity: 0.8;
+}
+
+.todo__btn_clear:hover,
+.todo__btn_edit:hover,
+.todo__btn_delete:hover {
 	opacity: 1;
 }
+
